# analog-rb

./: .gitignore  ClebschGordan.cpp  LICENSE  README.md  demo-gatefactory.ipynb  demo.ipynb  demo.py  pyproject.toml
projectors/3modes_2particles/: cgc_2-1-0.txt  cgc_4-2-0.txt  projector_2-1-0.txt  projector_4-2-0.txt
projectors/4modes_2particles/: cgc_2-1-1-0.txt  cgc_4-2-2-0.txt  projector_2-1-1-0.txt  projector_4-2-2-0.txt
src/analogrb/: arb_protocol.py  basis.py  bootstrap.py  bosonic.py  channel.py  gatefactory.py  plot.py  projector.py  save_load.py
